= 0.17.0 / 2012-09-03

  * Added strata.authenticityToken middleware.
  * Renamed strata.authBasic to strata.basicAuth.
  * Removed mock.request in favor of mock.call. This provides a more consistent
    interface with strata.call.
  * Moved utils.empty to utils.ok. This is more consistent with the other
    utils helper methods.
  * Removed strata.InvalidRequestBodyError in favor of strata.Error.

= 0.16.1 / 2012-08-18

  * Fixed a file name in a require call.

= 0.16.0 / 2012-08-18

  * Added the ability to pass a callback as the second argument to a build
    middleware. This callback receives the build as its only argument.
  * Require node >= 0.8.0.

= 0.15.1 / 2012-05-31

  * Updates to some documentation.

= 0.15.0 / 2012-05-31

  * Added -r flag to strata executable to automatically reload all application
    code on a given interval in a child process.
  * Added -q flag to strata executable to prevent the server startup message
    from being printed to the console.
  * Added strata.defaultPort variable.

= 0.14.0 / 2012-05-30

  * Renamed strata.map middleware to strata.urlMap to avoid naming conflict
    with high-level sugar API.
  * Renamed strata.route middleware to strata.router to avoid naming conflict
    with high-level sugar API.

= 0.13.0 / 2012-05-29

  * Added timeout middleware to set a limit on the amount of time a server may
    respond to a request. Also added timeout environment variable.
  * Added strata.bind and strata.startServer. Also added a requestListener
    argument to strata.createServer in order to more closely conform with
    the API in node core and removed the app argument so that more than one app
    may be bound to a single server.
  * Removed "name" option from strata.createServer.

= 0.12.5 / 2012-04-16

  * Use "delete" instead of "del" for router methods. Although "delete" is
    indeed a reserved word in JavaScript, that fact applies only to identifiers