@@ -16,20 +16,20 @@ module.exports = function (app, headerName, sessionKey, byteLength) {
       session = {};
     }
 
+    if (!(sessionKey in session)) {
+      try {
+        var buffer = crypto.randomBytes(byteLength);
+        session[sessionKey] = buffer.toString('hex');
+      } catch (err) {
+        if (strata.handleError(err, env, callback)) {
+          return;
+        }
+      }
+    }
+
     if (utils.isSafe(env)) {
       app(env, callback);
     } else {
-      if (!(sessionKey in session)) {
-        try {
-          var buffer = crypto.randomBytes(byteLength);
-          session[sessionKey] = buffer.toString('hex');
-        } catch (err) {
-          if (strata.handleError(err, env, callback)) {
-            return;
-          }
-        }
-      }
-
       var token = session[sessionKey];
 
       if (env[propName] && env[propName] === session[sessionKey]) {
